--- a/src/functions/lookup/wasm/Cargo.toml
+++ b/src/functions/lookup/wasm/Cargo.toml
@@ -4,3 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+tokio_wasi = { version = "1", features = ["rt", "macros", "net", "time", "io-util"]}
+warp_wasi = "0.3"
