--- a/src/functions/lookup/wasm/Dockerfile
+++ b/src/functions/lookup/wasm/Dockerfile
@@ -1,10 +1,9 @@
 # syntax=docker/dockerfile:1
-
 FROM --platform=$BUILDPLATFORM rust:1.71 AS buildbase
 WORKDIR /src
 RUN <<EOT bash
-    set -ex
-    rustup target add wasm32-wasi
+set -ex
+rustup target add wasm32-wasi
 EOT
 
 FROM buildbase AS build
@@ -19,3 +18,4 @@ RUN chmod a+x wasm.wasm
 FROM scratch
 ENTRYPOINT [ "/wasm.wasm" ]
 COPY --link --from=build /src/wasm.wasm /wasm.wasm
+LABEL org.opencontainers.image.source=https://github.com/aalonsolopez/terminology-service
