--- a/src/functions/lookup/wasm/kubernetes/001-knative-service.yaml
+++ b/src/functions/lookup/wasm/kubernetes/001-knative-service.yaml
@@ -7,6 +7,7 @@ spec:
   template:
     spec:
       runtimeClassName: wasmedge
+      platform: wasi/wasm
       containers:
       - name: lookup-wasm
         image: ghcr.io/aalonsolopez/lookup-wasm:latest
