--- a/kubernetes/003-knative-scaletozero.yaml
+++ b/kubernetes/003-knative-scaletozero.yaml
@@ -1,7 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
- name: config-autoscaler
- namespace: knative-serving
+  name: config-autoscaler
+  namespace: knative-serving
 data:
- scale-to-zero-grace-period: "10s"
+  scale-to-zero-grace-period: "10s"
+  initial-scale: "0"
+  allow-zero-initial-scale: "true"
+  scale-down-delay: "0s"
