--- a/src/functions/lookup/standard/Dockerfile
+++ b/src/functions/lookup/standard/Dockerfile
@@ -1,10 +1,5 @@
-FROM rust:alpine3.15 AS builder
-RUN apk add musl-dev --no-cache
+FROM rust
 WORKDIR /src
 COPY . .
 RUN cargo build --release
-
-FROM alpine:3.15
-WORKDIR /app
-COPY --from=builder /src/target/release/standard .
-ENTRYPOINT [ "./standard" ]
+ENTRYPOINT [ "./target/release/standard" ]
