--- a/src/functions/lookup/wasm/kubernetes/001-knative-service.yaml
+++ b/src/functions/lookup/wasm/kubernetes/001-knative-service.yaml
@@ -5,6 +5,10 @@ metadata:
   namespace: default
 spec:
   template:
+    metadata:
+      annotations:
+        autoscaling.knative.dev/minScale: "0"
+        autoscaling.knative.dev/initial-scale: "0"
     spec:
       runtimeClassName: wasmedge
       containers:
