--- a/src/functions/lookup/wasm/kubernetes/000-k8s-deployment.yaml
+++ b/src/functions/lookup/wasm/kubernetes/000-k8s-deployment.yaml
@@ -23,3 +23,7 @@ spec:
           value: full
         - name: DNS_SERVER
           value: 10.152.183.10:53
+        resources:
+          limits:
+            cpu: "1"
+            memory: "512Mi"
