--- a/src/functions/lookup/wasm/kubernetes/001-knative-service.yaml
+++ b/src/functions/lookup/wasm/kubernetes/001-knative-service.yaml
@@ -21,3 +21,7 @@ spec:
           value: full
         - name: DNS_SERVER
           value: 10.152.183.10:53
+        resources:
+          limits:
+            cpu: "1"
+            memory: "512Mi"
