--- a/src/functions/lookup/standard/kubernetes/000-k8s-deployment.yaml
+++ b/src/functions/lookup/standard/kubernetes/000-k8s-deployment.yaml
@@ -17,3 +17,21 @@ spec:
         image: ghcr.io/aalonsolopez/lookup-standard:latest
         ports:
         - containerPort: 8080
+        resources:
+          limits:
+            cpu: "1"
+            memory: "512Mi"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: lookup-standard
+  namespace: default
+spec:
+  selector:
+    app: lookup-standard
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
+      nodePort: 30272
