Recursos limitados en servicio que no los tenia

--- a/src/functions/lookup/standard/kubernetes/001-knative-service.yaml
+++ b/src/functions/lookup/standard/kubernetes/001-knative-service.yaml
@@ -15,3 +15,7 @@ spec:
         image: ghcr.io/aalonsolopez/lookup-standard:latest
         ports:
         - containerPort: 8080
+        resources:
+          limits:
+            cpu: "1"
+            memory: "512Mi"
